simplified color icon animations

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         </td>
 
-        <td id="blue">
+        <td class="color" id="blue">
           <a href="*"><i class="fa fa-square" aria-hidden="true"></i></a>
           <!-- Color Icons -->
           <table class="colorIcons">
@@ -147,7 +147,7 @@
 
         </td>
 
-        <td id="pink">
+        <td class="color" id="pink">
           <a href="*"><i class="fa fa-square" aria-hidden="true"></i></a>
 
           <!-- Color Icons -->
@@ -233,7 +233,7 @@
 
         </td>
 
-        <td id="yellow">
+        <td class="color" id="yellow">
           <a href="*"><i class="fa fa-square" aria-hidden="true"></i></a>
 
           <!-- Color Icons -->
