final version with nav menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 </head>
 <body>
   <ul class="container">
-
+    <nav>
+      <div class="mobile-nav">
+        <span>Menu</span>
+        <ul class="main-menu">
+            <li>Home</li>
+            <li>Cart</li>
+            <li>About Us</li>
+            <li>Help</li>
+        </ul>
+      </div>
+    </nav>
 <!-- TShirt 1 -->
 
   <li class="tshirt">
